--- a/index.jade
+++ b/index.jade
@@ -4,16 +4,13 @@ html(lang='en')
 		meta(charset='utf-8')
 		title 1942 Game
 		link(rel="stylesheet", href="./assets/css/style.css")
-		script(src="https://code.jquery.com/jquery-3.1.1.min.js", integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=",  crossorigin="anonymous")
-		script(src="./assets/js/app.js" type="application/js")
+		//- script(src="https://code.jquery.com/jquery-3.1.1.min.js", integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=",  crossorigin="anonymous")
+		script(src="./assets/js/jquery.js")
+		script(src="./assets/js/app.js" type="application/javascript")
 	body
 		#container
 			#hero
 			#enemies
-				.enemy-1
-				.enemy-1
-				.enemy-1
-				.enemy-1
 			#bullets
 				.bullet
 				.bullet
