Create Hero Object to separate the hero controller logic from the game. Also created bullet Object and appended to the DOM when spacebar is pressed

--- a/index.jade
+++ b/index.jade
@@ -9,11 +9,7 @@ html(lang='en')
 		script(src="./assets/js/app.js" type="application/javascript")
 	body
 		#container
-			#hero
+			#heroes
 			#enemies
 			#bullets
-				.bullet
-				.bullet
-				.bullet
-				.bullet
 			#score
