--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,18 @@
+* {
+  margin: 0;
+  border: 0; }
+
 body {
   background-color: black; }
 
 #container {
+  position: relative;
   background: url("../img/background.jpg");
   width: 1000px;
-  height: 550px; }
+  height: 550px;
+  overflow: hidden; }
 
-#hero {
+hero_0 {
   background: url("../img/1942.gif");
   background-position: -85px -183px;
   width: 25px;
@@ -26,11 +32,11 @@ enemy_0 {
   -webkit-animation: Enemy-sway 2s infinite;
   animation: Enemy-sway 2s infinite; }
 
-.bullet {
+bullet_0 {
   background: url("../img/1942.gif");
-  background-position: -185px -400px;
-  width: 18px;
-  height: 18px;
+  background-position: -188px -406px;
+  width: 8px;
+  height: 8px;
   position: absolute; }
 
 #score {
