--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,19 @@ bullet_0 {
   height: 8px;
   position: absolute; }
 
+collision_0 {
+  background: url("../img/1942.gif");
+  width: 17px;
+  height: 17px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-animation: Explosion-1 1s 1;
+  animation: Explosion-1 1s 1;
+  -webkit-transform: scale(4);
+  -ms-transform: scale(4);
+  transform: scale(4); }
+
 #score {
   position: absolute;
   border: 5px solid red;
@@ -116,3 +129,39 @@ bullet_0 {
   100% {
     -webkit-transform: translateY(0px);
     transform: translateY(0px); } }
+
+@-webkit-keyframes Explosion-1 {
+  0%, 20% {
+    background-position: -40px -42px; }
+  20%, 40% {
+    background-position: -66px -42px; }
+  40%, 60% {
+    background-position: -88px -42px;
+    width: 17px;
+    height: 17px; }
+  60%, 80% {
+    background-position: -113px -33px;
+    width: 25px;
+    height: 25px; }
+  80%, 100% {
+    background-position: -147px -33px;
+    width: 25px;
+    height: 25px; } }
+
+@keyframes Explosion-1 {
+  0%, 20% {
+    background-position: -40px -42px; }
+  20%, 40% {
+    background-position: -66px -42px; }
+  40%, 60% {
+    background-position: -88px -42px;
+    width: 17px;
+    height: 17px; }
+  60%, 80% {
+    background-position: -113px -33px;
+    width: 25px;
+    height: 25px; }
+  80%, 100% {
+    background-position: -147px -33px;
+    width: 25px;
+    height: 25px; } }
