--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -35,6 +35,19 @@ bullet_0
 	height: 8px
 	position: absolute
 
+collision_0
+
+		background:  url('../img/1942.gif')
+		// background-position:  -40px -42px
+		width: 17px
+		height: 17px
+		position: absolute
+		top: 50%
+		left: 50%
+		animation: Explosion-1 1s 1
+		transform: scale(4)
+
+
 #score
 	position: absolute
 	border: 5px solid red
@@ -68,3 +81,21 @@ bullet_0
 		transform: translateY(-3px)
 	100%
 		transform: translateY(0px)
+
+@keyframes Explosion-1
+	0%,20%
+		background-position:  -40px -42px
+	20%,40%
+		background-position:  -66px -42px
+	40%,60%
+		background-position:  -88px -42px
+		width: 17px
+		height: 17px
+	60%,80%
+		background-position:  -113px -33px
+		width: 25px
+		height: 25px
+	80%,100%
+		background-position:  -147px -33px
+		width: 25px
+		height: 25px
