--- a/index.jade
+++ b/index.jade
@@ -6,9 +6,14 @@ html(lang='en')
 		link(rel="stylesheet", href="./assets/css/style.css")
 		//- script(src="https://code.jquery.com/jquery-3.1.1.min.js", integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=",  crossorigin="anonymous")
 		script(src="./assets/js/jquery.js")
+		script(src="./assets/js/models/bullet.js" type="application/javascript")
+		script(src="./assets/js/models/enemy.js" type="application/javascript")
+		script(src="./assets/js/models/hero.js" type="application/javascript")
+		script(src="./assets/js/controllers/game.js" type="application/javascript")
 		script(src="./assets/js/app.js" type="application/javascript")
 	body
 		#container
+			collision_0
 			#heroes
 			#enemies
 			#bullets
