--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,10 +47,7 @@ collision_0 {
   top: 50%;
   left: 50%;
   -webkit-animation: Explosion-1 1s 1;
-  animation: Explosion-1 1s 1;
-  -webkit-transform: scale(4);
-  -ms-transform: scale(4);
-  transform: scale(4); }
+  animation: Explosion-1 1s 1; }
 
 #score {
   position: absolute;
