Refactor code to account for file structure change

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -6,13 +6,13 @@ body
 
 #container
 	position: relative
-	background:  url('../img/background.jpg')
+	background:  url('../media/img/background.jpg')
 	width: 1000px
 	height: 550px
 	overflow: hidden
 
 hero_0
-	background:  url('../img/1942.gif')
+	background:  url('../media/img/1942.gif')
 	background-position:  -85px -183px
 	width: 25px
 	height: 20px
@@ -20,7 +20,7 @@ hero_0
 	animation: Hero-sway 2s infinite
 
 enemy_0
-	background:  url('../img/1942.gif')
+	background:  url('../media/img/1942.gif')
 	background-position:  -32px -10px
 	width: 26px
 	height: 17px
@@ -29,7 +29,7 @@ enemy_0
 	animation: Enemy-sway 2s infinite
 
 bullet_0
-	background:  url('../img/1942.gif')
+	background:  url('../media/img/1942.gif')
 	background-position:  -188px -406px
 	width: 8px
 	height: 8px
@@ -37,7 +37,7 @@ bullet_0
 
 collision_0
 
-		background:  url('../img/1942.gif')
+		background:  url('../media/img/1942.gif')
 		// background-position:  -40px -42px
 		width: 17px
 		height: 17px
