--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,13 +7,13 @@ body {
 
 #container {
   position: relative;
-  background: url("../img/background.jpg");
+  background: url("../media/img/background.jpg");
   width: 1000px;
   height: 550px;
   overflow: hidden; }
 
 hero_0 {
-  background: url("../img/1942.gif");
+  background: url("../media/img/1942.gif");
   background-position: -85px -183px;
   width: 25px;
   height: 20px;
@@ -22,7 +22,7 @@ hero_0 {
   animation: Hero-sway 2s infinite; }
 
 enemy_0 {
-  background: url("../img/1942.gif");
+  background: url("../media/img/1942.gif");
   background-position: -32px -10px;
   width: 26px;
   height: 17px;
@@ -33,14 +33,14 @@ enemy_0 {
   animation: Enemy-sway 2s infinite; }
 
 bullet_0 {
-  background: url("../img/1942.gif");
+  background: url("../media/img/1942.gif");
   background-position: -188px -406px;
   width: 8px;
   height: 8px;
   position: absolute; }
 
 collision_0 {
-  background: url("../img/1942.gif");
+  background: url("../media/img/1942.gif");
   width: 17px;
   height: 17px;
   position: absolute;
